methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:8: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsReturning'
override def run() {
             ^