methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  if (estSurBiscuit()) {
    vuBiscuit = true
  }
  return vuBiscuit
}
override def run() {
	while (!haveBaggle) {
  	for (compteur <- 1 to 6) {
    	avance()
  	}
  	for (compteur2 <- 1 to 6) {
    	recule()
  	}
	}
}